--- a/.github/workflows/html-docker-image.yml
+++ b/.github/workflows/html-docker-image.yml
@@ -16,5 +16,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag cr.jedlik.cloud/html-feketemiklos:0.2
-        docker push cr.jedlik.cloud/html-feketemiklos:0.2
+        docker build . --file Dockerfile --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
+        docker login ghcr.io -u feketemiklosbenjamin -p ${{secrets.GHCR_TOKEN}}
+        docker push ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
