--- a/.github/workflows/html-docker-image.yml
+++ b/.github/workflows/html-docker-image.yml
@@ -3,8 +3,12 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
+    path:
+      - 'html/**'
   pull_request:
     branches: [ "main" ]
+    path:
+      - 'html/**'
 
 jobs:
 
@@ -16,6 +20,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
+        cd html
         docker build . --file Dockerfile --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
         docker login ghcr.io -u feketemiklosbenjamin -p ${{secrets.GHCR_TOKEN}}
         docker push ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
