--- a/.github/workflows/html-docker-image.yml
+++ b/.github/workflows/html-docker-image.yml
@@ -22,6 +22,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
+        docker build . --file Dockerfile --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:$IMAGE_TAG
         docker login ghcr.io -u feketemiklosbenjamin -p ${{secrets.GHCR_TOKEN}}
-        docker push ghcr.io/feketemiklosbenjamin/html-feketemiklos:0.2
+        docker push ghcr.io/feketemiklosbenjamin/html-feketemiklos:$IMAGE_TAG
