--- a/.github/workflows/html-docker-image.yml
+++ b/.github/workflows/html-docker-image.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
+        cd html
         docker build . --file Dockerfile --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:$IMAGE_TAG --tag ghcr.io/feketemiklosbenjamin/html-feketemiklos:latest
         docker login ghcr.io -u feketemiklosbenjamin -p ${{secrets.GHCR_TOKEN}}
         docker push ghcr.io/feketemiklosbenjamin/html-feketemiklos:$IMAGE_TAG
